#283: Add module name to projects.