@@ -70,6 +70,7 @@ subprojects { Project prj ->
 			enabled = false
 		}
 	}
+
 }
 
 allprojects { Project prj ->
@@ -148,3 +149,50 @@ task zip(type: Zip) {
 		zip.renameTo(new File('build/package', zip.getName()))
 	}
 }
+
+
+subprojects {
+	afterEvaluate {
+		repositories {
+			jcenter()
+		}
+
+		compileJava {
+			inputs.property("moduleName", moduleName)
+			doFirst {
+				options.compilerArgs = [
+					'--module-path', classpath.asPath,
+				]
+				classpath = files()
+			}
+		}
+
+		compileTestJava {
+			inputs.property("moduleName", moduleName)
+			doFirst {
+				options.compilerArgs = [
+					'--module-path', classpath.asPath,
+					'--add-modules', 'junit',
+					'--add-reads', "$moduleName=junit",
+					'--patch-module', "$moduleName=" + files(sourceSets.test.java.srcDirs).asPath,
+				]
+				classpath = files()
+			}
+		}
+
+		test {
+			inputs.property("moduleName", moduleName)
+			doFirst {
+				jvmArgs = [
+					'--module-path', classpath.asPath,
+					'--add-modules', 'ALL-MODULE-PATH',
+					'--add-reads', "$moduleName=junit",
+					'--patch-module', "$moduleName=" + files(sourceSets.test.java.outputDir).asPath,
+				]
+				classpath = files()
+			}
+		}
+	}
+}
+
+
